create template p3
